--- a/Android/BooYa/res/layout/main.xml
+++ b/Android/BooYa/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -9,4 +9,5 @@
     android:layout_height="wrap_content" 
     android:text="@string/hello"
     />
-</LinearLayout>
+<Button android:layout_height="wrap_content" android:id="@+id/button1" android:text="Button" android:layout_width="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true"></Button>
+</RelativeLayout>
