--- a/Android/BooYa/res/layout/main.xml
+++ b/Android/BooYa/res/layout/main.xml
@@ -9,4 +9,5 @@
     android:layout_height="wrap_content" 
     android:text="@string/hello"
     android:id="@+id/textView1"/>
+<Button android:text="Button" android:layout_height="wrap_content" android:id="@+id/button1" android:layout_width="wrap_content" android:layout_centerHorizontal="true" android:layout_marginTop="136dp"></Button>
 </RelativeLayout>
